keep basic piece-square score updated as the moves are plyed; leaf calcs are now super fast